# djtools

./: README.md  metadata.py  metadata_parse.py
move-to-root - Copy/move_to_root/: README.md
move-to-root - Copy/move_to_root/src/move_to_root/: audio_similarity.py  cli.py  core.py  db.py  hashing.py  index.py  logging.py  utils.py  validation.py
move-to-root - Copy/move_to_root/src/move_to_root/commands/: apply.py  find_similar.py  history.py  rollback.py  scan.py  status.py
move-to-root-scripts/: Move-ItemsToRoot.psm1  move_to_root.py
move_to_root/: README.md  pyproject.toml
move_to_root/src/move_to_root/: audio_similarity.py  cli.py  core.py  db.py  hashing.py  index.py  logging.py  utils.py  validation.py
move_to_root/src/move_to_root/commands/: apply.py  find_similar.py  history.py  rollback.py  scan.py  status.py
