[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "move-to-root"
version = "1.0.0"
description = "Enterprise-grade directory flattening CLI tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich"
]

[project.scripts]
move-to-root = "move_to_root.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["move_to_root*"]